@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1601</version>
+    <version>1603</version>
     <dependencies>
         <dependency>profile-ftw.tagging:default</dependency>
         <dependency>profile-ftw.colorbox:default</dependency>
