@@ -14,6 +14,7 @@
   <property name="filter_content_types">True</property>
   <property name="allowed_content_types">
     <element value="Image"/>
+    <element value="File"/>
   </property>
   <property name="allow_discussion">True</property>
   <property name="default_view">blog_entry_view</property>
