@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="BlogEntry"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="ftw.blog" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <property name="allowed_content_types" purge="False">
+    <element value="File"/>
+  </property>
+</object>
